newInstance() deprecation fixes
Class.newInstance() => Class.getDeclaredConstructor().newInstance()